# merlin_robot

./: .gitignore  README.md  commands  odom.bag  path_store.py  paths.bag  setup.bash  start_merlin
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: merlin_control.pc  merlin_description.pc  merlin_gazebo.pc
devel/share/merlin_control/cmake/: merlin_controlConfig.cmake
devel/share/merlin_gazebo/cmake/: merlin_gazeboConfig.cmake
models/merlin/: model.sdf
src/merlin_control/: CMakeLists.txt  package.xml
src/merlin_control/config/: diff_control.yaml  merlin_control.yaml
src/merlin_control/launch/: merlin_control.launch
src/merlin_description/: CMakeLists.txt  package.xml
src/merlin_description/config/: joy_teleop.yaml
src/merlin_description/urdf/: diff_robot.urdf  merlin.gazebo  merlin.urdf  merlin.urdf.xacro
src/merlin_gazebo/: CMakeLists.txt  package.xml
src/merlin_gazebo/launch/: merlin.launch  merlin_robot.launch  merlin_world.launch  multi_robot.py  teleop.launch
src/merlin_msgs/: CMakeLists.txt  Waypoint.msg  package.xml
src/merlin_msgs/msg/: Path2D.msg
src/merlin_msgs/srv/: AppendPath.srv  GetPathQueued.srv  GetPaths.srv  SavePath.srv  StartPath.srv
src/merlin_nav/: CMakeLists.txt  package.xml  paths.bag
src/merlin_nav/scripts/: brain.py  control.py  fake_localization2D.py  nav.py  path_queuer.py  path_store.py  pose_from_gazebo.py  segment_tracking.py
tools/: .nav_tool.py.swp  nav_tool.py
web/: .test_path.html.swp  easeljs_test.html  get_paths.html  index.html  keyboardteleop.html  test_path.html
(+1 files in other folders)
