<?xml version="1.0"?>
<package>
  <name>merlin_control</name>
  <version>0.0.0</version>
  <description>The merlin_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pierre@todo.todo">pierre</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <run_depend>controller_manager</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
